<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ActionBar with Back Button -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/type_of_qr_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/custom_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:ellipsize="end"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:textSize="25sp"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Result Text Area -->
    <TextView
        android:id="@+id/qr_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/toolbar"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:background="@color/primary_text"
        android:textColor="@color/white"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:maxLines="15"
        android:lineSpacingExtra="6dp" />

    <TextView
        android:id="@+id/timestamp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qr_result_text"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        android:gravity="center"
        android:background="@color/secondary_text" />

    <!-- Horizontal LinearLayout for Buttons -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        android:layout_below="@id/qr_result_text"
        android:layout_marginTop="30dp"
        android:weightSum="3">

        <!-- Copy Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Copy"
            android:textColor="@color/white"
            android:background="@drawable/button_bg" />

        <!-- Share Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:text="@string/share"
            android:textColor="@color/white"
            android:background="@drawable/button_bg" />

        <!-- Connect Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Connect"
            android:visibility="gone"
            android:textColor="@color/white"
            android:background="@drawable/toolbar_bg" />
    </LinearLayout>

    <!-- Open URL Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open_url"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/open_url"
        android:textColor="@color/white"
        android:background="@drawable/button_bg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/extra_opener"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_open_url"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/open_url"
        android:textColor="@color/white"
        android:visibility="gone"
        android:background="@drawable/button_bg" />

    <!-- ImageView to show scanned image -->
    <ImageView
        android:id="@+id/qr_result_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/extra_opener"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/qr_result_image" />
</RelativeLayout>
