<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/zxing_barcode_scanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:zxing_scanner_layout="@layout/custom_barcode_scanner" />

        <ImageView
            android:id="@+id/barcodeBorderImage"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/app_name"
            android:elevation="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_border" />

        <TextView
            android:id="@+id/blinkingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/place_barcode_text"
            android:textSize="16sp"
            android:textColor="@color/button_color"
            android:alpha="0"
            android:visibility="visible"
             />
        <ImageView
            android:id="@+id/scanner_laser"
            android:layout_width="240dp"
            android:layout_height="3dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:alpha="0.5"
            android:background="@drawable/scanner_line_gradient"
            android:visibility="visible" />

        <TextView
            android:id="@+id/zoom_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:contentDescription="@string/zoom_progress"
            android:layout_below="@id/barcodeBorderImage"
            android:textColor="@color/button_color" />

        <!-- Icon container -->
        <LinearLayout
            android:id="@+id/icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/flip_camera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/flip_camera"
                android:src="@drawable/flip_camera"
                android:tint="@color/white"
                android:padding="1dp"
                android:background="@drawable/circular_background"
                android:layout_marginEnd="20dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/flashlight_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/Flashlight"
                android:src="@drawable/flash_light"
                android:tint="@color/white"
                android:padding="1dp"
                android:background="@drawable/circular_background"
                android:layout_marginEnd="20dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/open_gallery"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/open_gallery"
                android:src="@drawable/open_gallery"
                android:tint="@color/white"
                android:padding="1dp"
                android:background="@drawable/circular_background"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <!-- RelativeLayout for SeekBar and Icons -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="150dp">

            <ImageView
                android:id="@+id/seekbar_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/zoom_progress"
                android:src="@drawable/zoom_out" />

            <ImageView
                android:id="@+id/seekbar_icon_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/zoom_progress"
                android:src="@drawable/zoom_in_icon" />

            <SeekBar
                android:id="@+id/zoom_seekbar"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/seekbar_icon"
                android:layout_centerVertical="true"
                android:max="100"
                android:contentDescription="@string/zoom_progress"
                android:layout_marginBottom="40dp"
                android:progress="0"
                android:layout_marginStart="8dp"
                android:thumbTint="@color/button_color"
                android:progressTint="@color/button_color"
                android:layout_marginEnd="16dp" />
        </RelativeLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent_color"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>
