<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawer_background">
    <!-- Centered Layout for QR Icon, Toolbar Title, and Timestamp Text -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centered_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <!-- QR Icon -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/type_of_qr_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/scanner_frame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/toolbar_color" />

        <TextView
            android:id="@+id/custom_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/qr_type_unknown"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/type_of_qr_icon"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/timestamp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/qr_type_unknown"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_toolbar_title" />

        <View
            android:id="@+id/separator_line3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/border_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timestamp_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Scrollable Content -->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centered_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- QR Result Text -->
            <TextView
                android:id="@+id/qr_result_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/card_background"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:text="@string/qr_type_unknown"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/card_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qr_result_text">
                <!-- Separator Line -->
                <View
                    android:id="@+id/separator_line4"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/border_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/qr_result_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:backgroundTint="@color/transparent_color"
                        android:text="@string/Copy"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:icon="@drawable/content_copy_24px"
                        app:iconGravity="top"
                        app:iconPadding="4dp"
                        app:iconSize="35dp"
                        app:iconTint="@color/white" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:backgroundTint="@color/transparent_color"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:icon="@drawable/share_24px"
                        app:iconGravity="top"
                        app:iconPadding="4dp"
                        app:iconSize="35dp"
                        app:iconTint="@color/white" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:backgroundTint="@color/transparent_color"
                        android:maxLines="1"
                        android:text="@string/connect_to_wifi"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:visibility="gone"
                        app:icon="@drawable/wifi"
                        app:iconGravity="top"
                        app:iconPadding="4dp"
                        app:iconSize="35dp"
                        app:iconTint="@color/white" />
                </LinearLayout>

                <!-- Second Row of Buttons: Open URL and Extra Opener -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_open_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="?attr/selectableItemBackground"
                        android:backgroundTint="@color/transparent_color"
                        android:text="@string/open_url"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:visibility="gone"
                        app:icon="@drawable/open_in_new_24px"
                        app:iconGravity="top"
                        app:iconPadding="4dp"
                        app:iconSize="35dp"
                        app:iconTint="@color/white" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/extra_opener"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="?attr/selectableItemBackground"
                        android:backgroundTint="@color/transparent_color"
                        android:text="@string/open"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:visibility="gone"
                        app:icon="@drawable/open_in_new_24px"
                        app:iconGravity="top"
                        app:iconPadding="4dp"
                        app:iconSize="35dp"
                        app:iconTint="@color/white" />
                </LinearLayout>

                <View
                    android:id="@+id/separator_line2"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/border_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/qr_result_text" />
            </LinearLayout>

            <!-- QR Result Image Container -->
            <RelativeLayout
                android:id="@+id/qr_result_image_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_container">

                <ImageView
                    android:id="@+id/qr_result_image"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/qr_result_image"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher_round" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>